client/src/css/style.css
/* ... */
.buy-badge,
.buy-bazar {
  display: inline-block;
  background-color: #14904d33;
  padding: 2px 4px;
  font-size: 10px;
  font-weight: 400;
  color: #14904d;
  text-transform: uppercase;
  border-radius: 0;
}

.sell-badge,
.sell-bazar {
  display: inline-block;
  background-color: #c11f4033;
  padding: 2px 4px;
  font-size: 10px;
  font-weight: 400;
  color: #df2a4e;
  text-transform: uppercase;
  border-radius: 0;
}

.sold-title {
  color: #14904d !important;
}

.sold-out-title {
  color: #df2a4e !important;
}

.coins {
  display: flex;
  align-items: center;
  gap: 5px;
}

.content {
  flex: 1;

  background-color: #000000;
  border-right: 1px solid #141414;
  padding: 8px 16px;
  min-height: 0;
  overflow: visible;
  height: auto;
  min-height: 0;
}

.right-side-bar {
  border-left: 1px solid #292929;
  /* padding: 0; */
}

.visualize-icon-title {
  font-weight: 400;
  font-size: 12px;
  line-height: 130%;
  text-transform: uppercase;
  color: #ebebeb;
}

/* Close Btn with filtering bx start */

.search-container {
  position: relative;
}

.search-input {
  padding-right: 40px;
  border-radius: 0px;
  border: 1px solid #ccc;
}

.searching-bx {
  position: absolute;
  bottom: 5px;
  right: 5px;
}

.search-btn {
  color: #ebebeb;
  font-size: 12px;
}

.clear-input-btn {
  position: absolute;
  right: 25px;
  top: 50%;
  transform: translateY(-50%);
  background: transparent;
  border: none;
  font-size: 16px;
  cursor: pointer;
  color: #888;
  z-index: 15;
}

.clear-input-btn:hover {
  color: #555;
}

/* Close Btn with filtering bx end*/

.skeleton-card {
  background: #0b0b0b;
  border-radius: 0px;
  padding: 14px;
  display: flex;
  align-items: center;
  gap: 20px;
}

.skeleton {
  background: linear-gradient(90deg, #1a1a1a 25%, #2a2a2a 37%, #1a1a1a 63%);
  background-size: 400% 100%;
  animation: shimmer 1.4s ease infinite;
  border-radius: 0px;
}

/* Sizes */
.skeleton-avatar {
  width: 64px;
  height: 64px;
  border-radius: 0;
}

.skeleton-text.nw-sm {
  width: 120px;
  height: 12px;
}

.skeleton-text.nw-md {
  width: 160px;
  height: 14px;
}

.skeleton-text.nw-xs {
  width: 90px;
  height: 10px;
  margin-top: 6px;
}

.skeleton-badge {
  width: 60px;
  height: 18px;
  border-radius: 0px;
  margin-right: 6px;
}

.skeleton-btn {
  width: 70px;
  height: 28px;
}

.skeleton-token {
  width: 64px;
  height: 64px;
  border-radius: 0;
}

.left-item-bx {
  display: flex;
  gap: 12px;
  align-items: center;
  flex: 1;
}

.sell-trade-bx {
  min-width: 90px;
  display: flex;
  justify-content: center;
}

.right-info {
  display: flex;
  gap: 10px;
  align-items: center;
}

/* Animation */
@keyframes shimmer {
  0% {
    background-position: -400px 0;
  }

  100% {
    background-position: 400px 0;
  }
}

/* Close Btn with filtering bx end*/

.nw-quick-bx img {
  width: 16px;
  height: 16px;
}

.quick-btn {
  background-color: #0a0a0a;
  font-weight: 400;
  font-size: 12px;
  line-height: 120%;
  text-transform: uppercase;
  color: #525252;
  border: 1px solid #3d3d3d;
  padding: 7px 8px;
  display: flex;
  align-items: center;
  gap: 10px;
}

.custom-tabs {
  border-bottom: none;
  background-color: #0a0a0a;
  border: 1px solid #141414;
  padding: 2px;
}

.nw-custm-trade-bx {
  /* padding: 8px; */
  border: 1px solid #141414;
}

.nw-btm-brd {
  border-bottom: 1px solid #141414;
  padding: 8px;
  background-color: #0a0a0a;
}

.custom-tabs .nav-link {
  display: inline-block;
  background: #0a0a0a;
  color: #8f8f8f;
  font-size: 12px !important;
  letter-spacing: 2px;
  padding: 4px 16px;
  border-radius: 0 !important;
  font-weight: 400;
  text-align: center;
  text-transform: uppercase;
}

.custom-tabs .nav-link:focus-visible {
  box-shadow: none;
}

.nav-tabs .nav-link:focus {
  border: none !important;
}

.custom-tabs .nav-link:hover {
  color: #fff;
  border: none !important;
  background-color: #8f8f8f;
}

.custom-tabs .nav-link.active {
  color: #fff;
  background: #3d3d3d;
  border: none !important;
}

.custom-tab-content {
  padding-top: 15px;
}

.plan-btn {
  display: flex;
  align-items: center;
  background-color: #0a0a0a;
  border: 1px solid #3d3d3d;
  padding: 6px 8px;
  font-weight: 400;
  font-size: 12px;
  line-height: 140%;
  vertical-align: middle;
  text-transform: uppercase;
  color: #8f8f8f;
}

.plan-btn:hover {
  background-color: #2b2a2a;
  color: #858585;
}

.plan-btn-list {
  display: flex;
  align-items: center;
  gap: 5px;
}

.custom-card {
  background: #0a0a0a;
  color: #fff;
  gap: 10px;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 8px;
}

.custom-card:hover {
  background-color: #1a1a1a;
}

.left-item-bx img {
  width: 64px;
  height: 64px;
  border-radius: 0px;
  object-fit: cover;
  border: 1px solid #3d3d3d;
}

.username {
  font-weight: 400;
  font-size: 14px;
  /* line-height: 140%; */
  vertical-align: middle;
  text-transform: uppercase;
  color: #ebebeb;
  text-align: start;
  margin-bottom: 0;
  margin-top: 0;
  text-wrap-mode: nowrap;
}

.tags {
  display: flex;
  align-items: center;
  gap: 4px;
  flex-wrap: wrap;
}

.tags .tag-title {
  display: inline-block;
  padding: 4px 6px;
  font-weight: 400;
  font-size: 10px;
  line-height: 140%;
  text-transform: uppercase;
  letter-spacing: 1px;
  color: #8f8f8f;
  background-color: #0a0a0a;
  border: 1px solid #141414;
}

.sold-out-title {
  font-weight: 400;
  font-size: 12px;
  text-transform: uppercase;
  color: #df2a4e;
  margin-top: auto;
}

.sold-title {
  color: #14904d;
}

.left-item-bx {
  display: flex;
  align-items: flex-start;
  gap: 10px;
  flex: 1;
}

.whale-content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  height: 64px;
  gap: 0px;
}

.hotness-title {
  font-weight: 500;
  font-size: 12px;
  line-height: 140%;
  text-align: center;
  letter-spacing: 1px;
  text-transform: uppercase;
  color: #ebebeb;
  margin-bottom: 0;
  margin-right: 2px;
}
/* ... */

